--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,14 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
-}
+--main-color: #F1B2CE;
+--accent-color: #FF0070;
+--title-color: #db00ff;
+--title-shadow: var(--accent-color);
+--text-decor-color: var(--accent-color);
+--button-color: var(--accent-color);
+--header-subtitle-color: #000028;
+--article-title-color: var(--header-subtitle-color);
+--background-image: url(/images/cover-image-dark.png);
+--background-color: #000028;
+--hover-color: rgba(255, 0, 112, 0.4);
+} 
+
