--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,8 @@
 }
 
 body {
+  font-size: 18px;
+  font-family: var(--font-family);
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
