--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,29 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+--main-color: #353430;
+--accent-color: #353430;
+--title-color: #FFC2E6;
+--title-shadow: #FF8DCB;
+--text-decor-color: var(--title-shadow);
+--button-color: #353430;
+--hover-color: #32312D66;
+--header-subtitle-color: #000028;
+--article-title-color: var(--header__subtitle-color);
+--background-image: url(/images/cover-image-light.png);
+--background-color: #FFF1F7;
+}
+ 
+@media (prefers-color-scheme: light) {
+  :root {
+  --main-color: #353430;
+  --accent-color: #353430;
+  --title-color: #FFC2E6;
+  --title-shadow: #FF8DCB;
+  --text-decor-color: var(--title-shadow);
+  --button-color: #353430;
+  --hover-color: #32312D66;
+  --header-subtitle-color: #000028;
+  --article-title-color: var(--header__subtitle-color);
+  --background-image: url(/images/cover-image-light.png);
+  --background-color: #FFF1F7;
+  }
 }
