--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@
 body {
   font-size: 18px;
   font-family: var(--font-family);
+  font-weight: 400;
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
