--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@
   .decorated-zone__rec {
     top: 21px;
     right: 30px;
-  }   
+  }
 }
 
 .decorated-zone__rec::after {
@@ -51,7 +51,7 @@
 
 @media (prefers-color-scheme: light) {
   .page.theme_auto .decorated-zone__rec {
-    display: none;  
+    display: none;
   }
 }
 
@@ -62,7 +62,7 @@
   height: 25px;
   border-right: 1px solid var(--accent-color);
   border-top: 1px solid var(--accent-color);
-  top:10px;
+  top: 10px;
   right: 0px;
 }
 
@@ -70,7 +70,7 @@
   .decorated-zone::after {
     top: 20px;
     right: 0px;
-  } 
+  }
 }
 
 .decorated-zone::before {
@@ -80,7 +80,7 @@
   height: 25px;
   border-bottom: 1px solid var(--accent-color);
   border-left: 1px solid var(--accent-color);
-  bottom:10px;
+  bottom: 10px;
   left: 0px;
 }
 
@@ -187,7 +187,7 @@
   }
 }
 
-@media (width>=768px) and (width<1024px){
+@media (width>=768px) and (width<1024px) {
   .header__title {
     margin-left: -3%;
   }
@@ -223,7 +223,7 @@
 }
 
 .article__text {
-  color: var(--main-color)
+  color: var(--main-color);
 }
 
 .article-text-link {
@@ -276,13 +276,15 @@
 }
 
 @media (width>=1024px) {
-  .section:first-of-type, .section:nth-of-type(3) {
+  .section:first-of-type,
+  .section:nth-of-type(3) {
     gap: 16px;
   }
 }
 
 @media (width>=768px) {
-  .section:first-of-type, .section:nth-of-type(3) {
+  .section:first-of-type,
+  .section:nth-of-type(3) {
     flex-direction: row;
   }
 }
@@ -295,7 +297,7 @@
   .section:last-of-type {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;  
+    gap: 20px;
   }
 }
 
@@ -322,7 +324,7 @@
 
 @media (width>=768px) {
   .section:last-of-type .article__image:last-of-type {
-    grid-column: 2/4; 
+    grid-column: 2/4;
   }
 }
 
@@ -333,7 +335,8 @@
 }
 
 @media (width>=768px) {
-  .section__title:first-of-type, .section__title:nth-of-type(3) {
+  .section__title:first-of-type,
+  .section__title:nth-of-type(3) {
     inline-size: 32.5%;
   }
 }
@@ -417,7 +420,7 @@
   height: 25px;
   border-right: 1px solid var(--accent-color);
   border-top: 1px solid var(--accent-color);
-  top:10px;
+  top: 10px;
   right: 0px;
 }
 
@@ -425,7 +428,7 @@
   .footer::after {
     top: 20px;
     right: 0x;
-  } 
+  }
 }
 
 .footer::before {
@@ -435,7 +438,7 @@
   height: 25px;
   border-bottom: 1px solid var(--accent-color);
   border-left: 1px solid var(--accent-color);
-  bottom:10px;
+  bottom: 10px;
   left: 0px;
 }
 
@@ -459,7 +462,6 @@
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 }
-
 
 .page {
   position: relative;
