--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
   font-size: 18px;
   font-family: var(--font-family);
   font-weight: 400;
+  line-height: 23.4px;
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
