--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,7 @@
 .header {
-  min-block-size: 668px;
-}
-
-@media (width>=768px) and (width<1024px) {
-  .header {
-    min-block-size: 1024px;
-  }
-}
-
-@media (width>=1024px) {
-  .header {
-    min-block-size: 768px;
-  }
+  block-size: 100vh;
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
 }
 
 .decorated-zone {
@@ -23,6 +13,7 @@
   position: absolute;
   top: 11px;
   right: 30px;
+  text-transform: uppercase;
 }
 
 @media (width>=768px) {
@@ -41,8 +32,7 @@
   background-color: var(--accent-color);
   box-shadow: 0 0 4px 2px var(--accent-color);
   top: 7px;
-  right: 0;
-  margin-right: -20px;
+  right: -20px;
 }
 
 .page.theme_light .decorated-zone__rec {
@@ -92,18 +82,13 @@
 }
 
 .header__theme-menu {
-  padding-top: 75px;
-}
-
-@media (width>=768px) and (width<1024px) {
-  .header__theme-menu {
-    padding-top: 191px;
-  }
+  align-self: center;
 }
 
 @media (width>=1024px) {
   .header__theme-menu {
-    padding-top: 20px;
+    align-self: start;
+    padding-top: 18px;
   }
 }
 
@@ -152,27 +137,6 @@
   border: 1px solid var(--button-color);
 }
 
-.header__title-box {
-  display: flex;
-  flex-direction: column;
-  gap: 55px;
-  padding: 72px 0 0;
-}
-
-@media (width>=768px) and (width<1024px) {
-  .header__title-box {
-    padding: 180px 0 0 0;
-    gap: 159px;
-  }
-}
-
-@media (width>=1024px) {
-  .header__title-box {
-    padding: 292px 0 0 0;
-    gap: 130px;
-  }
-}
-
 .header__title {
   color: var(--title-color);
   line-height: 95.7px;
@@ -200,6 +164,7 @@
 }
 
 .header__subtitle {
+  align-self: center;
   font-weight: 700;
   line-height: 23.4px;
   color: var(--header-subtitle-color);
@@ -207,13 +172,15 @@
 
 @media (width>=768px) {
   .header__subtitle {
-    align-self: end;
+    align-self: center;
+    justify-self: end;
     inline-size: 50%;
   }
 }
 
 .article__title {
   font-weight: 700;
+  font-size: 18px;
   line-height: 23.4px;
   color: var(--article-title-color);
 }
@@ -229,6 +196,7 @@
 .article-text-link {
   border: transparent;
   text-shadow: 3px 3px 0px var(--title-shadow);
+  text-decoration: none;
 }
 
 .article-text-link:hover {
@@ -241,6 +209,7 @@
 
 .article-text-link:focus-visible {
   outline: 1px solid var(--main-color);
+  outline-offset: 1px;
 }
 
 .article__image {
@@ -276,25 +245,23 @@
 }
 
 @media (width>=1024px) {
-  .section:first-of-type,
-  .section:nth-of-type(3) {
+  .section__rows {
     gap: 16px;
   }
 }
 
 @media (width>=768px) {
-  .section:first-of-type,
-  .section:nth-of-type(3) {
+  .section__rows {
     flex-direction: row;
   }
 }
 
-.section:last-of-type {
+.section__images {
   gap: 10px;
 }
 
 @media (width>=768px) {
-  .section:last-of-type {
+  .section__images {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
@@ -302,28 +269,28 @@
 }
 
 @media (width>=768px) {
-  .section:last-of-type .article__image:first-of-type {
+  .section__images .article__image:first-of-type {
     grid-row-start: 2;
     grid-column: 1/3;
   }
 }
 
 @media (width>=768px) {
-  .section:last-of-type .article__image:nth-of-type(2) {
+  .section__images .article__image:nth-of-type(2) {
     grid-row: 2/4;
     grid-column: 3/4;
   }
 }
 
 @media (width>=768px) {
-  .section:last-of-type .article__image:nth-of-type(3) {
+  .section__images .article__image:nth-of-type(3) {
     grid-row: 3/5;
     grid-column: 1/2;
   }
 }
 
 @media (width>=768px) {
-  .section:last-of-type .article__image:last-of-type {
+  .section__images .article__image:last-of-type {
     grid-column: 2/4;
   }
 }
@@ -335,8 +302,7 @@
 }
 
 @media (width>=768px) {
-  .section__title:first-of-type,
-  .section__title:nth-of-type(3) {
+  .section__rows .section__title {
     inline-size: 32.5%;
   }
 }
@@ -348,13 +314,13 @@
 }
 
 @media (width>=768px) {
-  .section:nth-of-type(2) .section__title {
+  .section__columns .section__title {
     width: 30%;
   }
 }
 
 @media (width>=768px) {
-  .section:last-of-type .article__title {
+  .section__images .article__title {
     width: 100%;
     grid-column: 1/4;
   }
@@ -363,18 +329,20 @@
 .article__list {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   gap: 20px;
 }
 
 @media (width>=1024px) {
-  .section:nth-of-type(2) .article__list {
+  .section__columns .article__list {
     flex-direction: row;
   }
 }
 
 @media (width>=768px) {
-  .section:nth-of-type(2) .article__list {
+  .section__columns .article__list {
     width: 100%;
+    gap: 20px;
   }
 }
 
@@ -385,8 +353,8 @@
 }
 
 @media (width>=1024px) {
-  .section:nth-of-type(2) .article__list .article__list-item {
-    inline-size: 32%;
+  .section__columns .article__list .article__list-item {
+    inline-size: 31.9%;
   }
 }
 
@@ -395,57 +363,13 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  min-block-size: 668px;
+  block-size: 100vh;
   margin-top: 40px;
 }
 
-@media (width>=768px) and (width<1024px) {
-  .footer {
-    min-block-size: 1024px;
-    margin-top: 60px;
-  }
-}
-
-@media (width>=1024px) {
-  .footer {
-    min-block-size: 768px;
-    margin-top: 60px;
-  }
-}
-
-.footer::after {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  border-right: 1px solid var(--accent-color);
-  border-top: 1px solid var(--accent-color);
-  top: 10px;
-  right: 0px;
-}
-
 @media (width>=768px) {
-  .footer::after {
-    top: 20px;
-    right: 0x;
-  }
-}
-
-.footer::before {
-  content: "";
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--accent-color);
-  border-left: 1px solid var(--accent-color);
-  bottom: 10px;
-  left: 0px;
-}
-
-@media (width>=768px) {
-  .footer::before {
-    bottom: 20px;
-    left: 0px;
+  .footer {
+    margin-top: 60px;
   }
 }
 
@@ -467,9 +391,9 @@
   position: relative;
   background-image: var(--background-image);
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: center;
   background-color: var(--background-color);
-  background-size: auto 768px;
+  background-size: cover;
   background-attachment: fixed;
   color: var(--main-text-color);
   padding: 0 10px;
